--- a/src/components/TextArea.module.css
+++ b/src/components/TextArea.module.css
@@ -15,7 +15,7 @@
 }
 
 .spaceBorder {
-  background-color: green;
+  background-color: rgb(28, 168, 28);
   margin-left: 0.5px;
   margin-right: 0.5px;
   border-radius: 2px;
@@ -28,5 +28,5 @@
 }
 
 .writtenText {
-  color: green;
+  color: rgb(28, 168, 28);
 }
